Bug 192411 - iwlwifi: 7265: ASSERT 2528 with 802.11w - WIFILNX-530
Summary: iwlwifi: 7265: ASSERT 2528 with 802.11w - WIFILNX-530
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-12 03:43 UTC by Stijn Tintel
Modified: 2017-01-18 11:57 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.8.15
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (97.82 KB, text/plain)
2017-01-12 03:43 UTC, Stijn Tintel
Details
Patch with potential fix (1.43 KB, patch)
2017-01-16 15:22 UTC, Luca Coelho
Details | Diff

Description Stijn Tintel 2017-01-12 03:43:07 UTC
Created attachment 251281 [details]
dmesg

After enabling 802.11w, my Intel Corporation Wireless 7265 (rev 59) firmware is frequently crashing.

This happens on firmware version 22.361476.0 and 22.391740.0.
Comment 1 Luca Coelho 2017-01-15 14:15:27 UTC
This assert means that we did not remove the key IGTK before adding a new one.  We will try to reproduce locally and check whether the problem is in wpa_s or in the driver.
Comment 2 Luca Coelho 2017-01-16 15:22:29 UTC
Created attachment 251991 [details]
Patch with potential fix

The problem seemed to be that we were not initializing the station ID and, thus, passing an invalid ID to the firmware when trying to remove the key.

Can you please test this patch? It should solve the problem.
Comment 3 Stijn Tintel 2017-01-17 07:48:26 UTC
(In reply to Luca Coelho from comment #2)
> Can you please test this patch? It should solve the problem.

Looks good, connected for 5h to my AP with 802.11w enabled and haven't seen a single FW crash.

Thanks
Comment 4 Luca Coelho 2017-01-17 08:27:52 UTC
Great! Thanks for reporting and re-testing, Stijn! We'll push this fix via our internal tree and it will reach the mainline soon.

Note You need to log in before you can comment on or make changes to this bug.